# meetscribe

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README-DEVELOPER.md  README.md  docker-compose.yml  pyproject.toml  test.raw
.github/workflows/: ai-review.yml  backend-ci.yml  frontend-ci.yml  mobile-ci.yml
backend/: config.py  database.py  main.py
backend/api/: compliance.py  engines.py  meetings.py  recording.py  search.py  settings.py  websocket.py
backend/asr/: base.py  cloud_engine.py  engine_factory.py  faster_whisper_engine.py  gasr_engine.py  gemma4_engine.py  language_router.py  parakeet_engine.py  phowhisper_engine.py  qwen3_asr_engine.py  simulstreaming_engine.py  vibevoice_engine.py  whisper_asr_client.py  whisperlivekit_engine.py
backend/audio/: capture.py  devices.py  file_import.py  maxine_preprocessor.py  recorder.py
backend/compliance/: audit_log.py  consent.py  data_purge.py
backend/diarization/: live_diarization.py  offline_diarization.py  speaker_profiles.py
backend/export/: clipboard.py  markdown.py
backend/llm/: base.py  claude_provider.py  multi_providers.py  ollama_provider.py  summarizer.py
backend/llm/templates/: client_call.yaml  client_call_vi.yaml  general.yaml  general_vi.yaml  interview.yaml  interview_vi.yaml  one_on_one.yaml  one_on_one_vi.yaml  sprint_retro.yaml  sprint_retro_vi.yaml  standup.yaml  standup_vi.yaml
backend/pipeline/: orchestrator.py
backend/storage/: embeddings.py  models.py  repository.py  search.py
docker/: Dockerfile
docs/: PRD_MeetScribe_v4_COMPLETE.md
electron/: main.ts  package.json  preload.ts  tray.ts
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json  vite.config.ts
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
iot/: audio_streamer.py
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/lib/core/router/: app_router.dart
mobile/lib/core/services/: api_service.dart
mobile/lib/core/theme/: app_theme.dart
scripts/: download_models.py
tests/backend/: test_asr_base.py  test_asr_engines.py  test_audio_devices.py  test_audio_recorder.py  test_compliance.py  test_database.py  test_diarization.py  test_e2e_pipeline.py  test_embeddings.py  test_file_import.py  test_llm_summarizer.py  test_maxine_preprocessor.py  test_pipeline.py  test_repository.py  test_search.py  test_storage_repository.py
tests/e2e/: test_meetscribe.py
(+20 files in other folders)
